# fracton

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  whitepaper-trisoma-v0.1  whitepaper-trisoma-v0.1.md
.github/workflows/: python-app.yml  python.yml  test.yml
configs/: archetypes.yaml  bio_risk.yaml  data_privacy.yaml  deepfake.yaml  nuke_launch.yaml  value_lockin.yaml  weapon_policy.yaml
docs/: elements.md  symbolic.md  symbolic_self.md  thesis.md
docs/thesis/: whitepaper-fracton-v0.2.md
fracton/: __init__.py  agents.py  align.py  classifier.py  core.py  external.py  fracton
fracton/symbolic/: __init__.py  detectors.py  model.py  policies.py
scripts/: bench.py  demo_symbolic.py
tests/: test_core.py  test_flag_off.py  test_loop.py  test_symbolic.py
