[tool.poetry]
name = "fracton"
version = "0.2.0"
description = "Triadic alignment loop reference impl."
authors = ["zero1ai <hello@zero1.ai>"]

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.3.0"
transformers = "^4.40.0"
vllm = "^0.4.0"
rich = "^13.7.0"
wandb = "^0.17.0"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
